[package]
name = "vesting_token"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.8.5"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
borsh = "0.9.3"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
thiserror = "1.0.30"

[features]
no-entrypoint = []

[lib]
name = "vesting"
crate-type = ["cdylib", "lib"]